Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/private/Private10.out
Private10.java:11:31: compiler.err.illegal.combination.of.modifiers: abstract, private
Private10.java:14:31: compiler.err.illegal.combination.of.modifiers: abstract, private
2 errors
